--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,12 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 serde = { version = "1.0", features = ["derive"] }
+dotenv = "0.15.0"
+futures = "0.3"
+chrono = { version = "0.4.23", features = ["serde"] }
+log = "0"
+
+[dependencies.mongodb]
+version = "2.2.0"
+default-features = false
+features = ["async-std-runtime"]
